--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "target": "es5",
-    "module": "es2015",
+    "module": "commonjs",
     "moduleResolution": "node",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
@@ -29,6 +29,7 @@
     "dist"
   ],
   "files": [
+    "index.ts",
     "ngx-uploader.ts"
   ],
   "angularCompilerOptions": {
